# CourtBase

./: .gitattributes  .gitignore  LICENSE  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6692d0e978f4_initial_schema.py  7bfaa7427765_ranking_awards_ledger.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  categories.py  clubs.py  events.py  health.py  matches.py  players.py  rankings.py  (+5 more)
backend/app/core/: config.py  database.py  dependencies.py  rate_limit.py  rbac.py  security.py  types.py
backend/app/models/: __init__.py  audit.py  enums.py  federation.py  match.py  mixins.py  notification.py  org.py  player.py  ranking.py  registration.py  role.py  stats.py  tournament.py  user.py
backend/app/schemas/: auth.py  club.py  common.py  match.py  player.py  ranking.py  registration.py  state.py  tournament.py
backend/app/services/: audit_service.py  auth_service.py  club_service.py  crud.py  draw_service.py  errors.py  event_category_service.py  event_service.py  match_service.py  player_io.py  player_service.py  player_stats_service.py  ranking_rule_service.py  ranking_service.py  registration_service.py  state_service.py  stats_service.py  storage_service.py  tournament_service.py
backend/app/utils/: age.py  ranking.py  scoring.py
backend/tests/: conftest.py  test_auth.py  test_players.py  test_rankings.py  test_scoring.py  test_states_clubs.py  test_storage.py  test_tournaments.py
(+38 files in other folders)
