[project]
name = "courtbase-bfms-backend"
version = "0.1.0"
description = "CourtBase — Badminton Federation Management System (backend)"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["alembic", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008",   # FastAPI uses function calls (Depends) in argument defaults
    "UP046",  # Pydantic generic models require the explicit Generic[T] base
]
